syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";
import "google/protobuf/empty.proto";

package CareerCloud.gRPC;
service CompanyJobDescription {
    rpc ReadCompanyJobDescription(IdRequestJobDescription) returns (CompanyJobDescriptionPayload);
	rpc CreateCompanyJobDescription(CompanyJobDescriptionPayload) returns (google.protobuf.Empty);
	rpc UpdateCompanyJobDescription(CompanyJobDescriptionPayload) returns (google.protobuf.Empty);
	rpc DeleteCompanyJobDescription(CompanyJobDescriptionPayload) returns (google.protobuf.Empty);
}

message IdRequestJobDescription{
		string Id=1;
	}

	message CompanyJobDescriptionPayload {
		 string Id = 1;
         string Job = 2; 
         string JobName = 3;
         string JobDescriptions = 4;
	   }